syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

package ProductService;

service ProductService {
  
  rpc AddProduct (Product) returns (google.protobuf.Empty);

  rpc GetProducts (google.protobuf.Empty) returns (ProductCollection);

  rpc Subscribe (google.protobuf.Empty) returns (stream Product);
}

message Product {
  string id = 1;
  string name = 2;
  double price = 3;
  google.protobuf.Timestamp lastModified = 4;
}

message ProductCollection {
    repeated Product items = 1;
}